# dawn-kestrel

./: .coverage  .env.example  .envrc  .gitignore  AGENTIC_REVIEW_PRD.md  AGENTS.md  AGENT_VERIFICATION_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  DOCUMENTATION.md  EXAMPLE_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  README.md  SDK_GAPS_AND_NEXT_STEPS.md  ULTRAWORK_STATUS.md  custom_agent_app_example.py  intake_verification.txt  pyproject.toml  redis-compose.yml  test_api_examples.py  tui.json  typecheck.sh
backend/: .coverage  main.py  pyproject.toml  test_api_response.py  test_session.py  test_storage.py
backend/api/: constants.py  health.py  messages.py  sessions.py  sessions_streaming.py  streaming.py  telemetry.py
backend/tests/: conftest.py
backend/tests/api/: test_messages.py  test_sessions.py  test_sessions_streaming.py  test_streaming.py  test_telemetry.py
opencode_python/: .coverage  .env.example  IMPLEMENTATION_SUMMARY.md  README.md  REVIEW_TOOL.md  TUI_PRD.md  __init__.py  fix_metadata_tests.py  opencode_pytho.scss  opencode_python  pyproject.toml  pyrightconfig.json  test_review_tool.py  test_simple_ai.py  ui_textual_epics.md
opencode_python/benchmarks/: agent_execution_results.json  context_build_results.json  memory_search_results.json
opencode_python/docs/: planning-agent-orchestration.md  planning-agent-rollout-and-migration.md
opencode_python/docs/examples/: custom_agent.py  memory_usage.py  multi_agent_workflow.py
opencode_python/docs/performance/: benchmarks.md
opencode_python/docs/reviewers/: dependencies_reviewer.md  mockreviewer_staged_patterns.yaml  release_changelog_reviewer.md  telemetry_reviewer.md
opencode_python/examples/: test_zai_connection.py
opencode_python/src/opencode_python/: __init__.py  ai_session.py  compaction.py  review.py  snapshot.py
opencode_python/src/opencode_python/agents/: __init__.py  builtin.py  config.py  memory_embedder.py  memory_manager.py  memory_summarizer.py  orchestrator.py  profiles.py  runtime.py  storage.py  tool_execution_tracker.py
opencode_python/src/opencode_python/ai/: tool_execution.py
opencode_python/src/opencode_python/benchmarks/: __init__.py  agent_execution.py  context_build.py  memory_search.py
opencode_python/src/opencode_python/cli/: __init__.py  ai_commands.py  main.py
opencode_python/src/opencode_python/context/: builder.py  pipeline.py
opencode_python/src/opencode_python/core/: __init__.py  agent_types.py  config.py  event_bus.py  exceptions.py  focus_events.py  focus_manager.py  models.py  provider_config.py  provider_settings.py  session.py  session_lifecycle.py  settings.py
opencode_python/src/opencode_python/export/: __init__.py  session_exporter.py
opencode_python/src/opencode_python/llm/: __init__.py  client.py
opencode_python/src/opencode_python/lsp/: client.py  config.py
opencode_python/src/opencode_python/observability/: __init__.py  dryrun.py  error_collector.py  models.py  safety.py  timeline.py
opencode_python/src/opencode_python/provider/: __init__.py  handler.py  stream_types.py
opencode_python/src/opencode_python/providers/: __init__.py  base.py  openai.py  registry.py  zai.py  zai_base.py
opencode_python/src/opencode_python/providers_mgmt/: __init__.py  models.py  storage.py
opencode_python/src/opencode_python/sdk/: __init__.py  client.py
opencode_python/src/opencode_python/session/: compaction.py  fork_revert.py  import_export.py  processor.py  revert.py
opencode_python/src/opencode_python/skills/: __init__.py  blocking.py  contracts.py  injector.py  loader.py  models.py  registry.py
opencode_python/src/opencode_python/snapshot/: __init__.py
opencode_python/src/opencode_python/storage/: memory_storage.py  session_meta.py  store.py
opencode_python/src/opencode_python/themes/: __init__.py  events.py  loader.py  models.py  posting.yaml  registry.py
opencode_python/src/opencode_python/tools/: __init__.py  additional.py  builtin.py  framework.py  permission_filter.py  registry.py  registry_complete.py
opencode_python/src/opencode_python/tui/: __init__.py  app.py  handlers.py  message_view.py  models.py  opencode.css  (+1 more)
opencode_python/storage/session/: test-session-empty-metadata
opencode_python/surface_area/: 01_cli_commands.md  02_tui_surface.md  03_session_management.md  04_tools_and_agents.md  05_git_integration.md  06_config_settings.md  08_lsp_integration.md  10_review_loop.md  11_ptm.md  README.md
opencode_python/tests/: test_account_config.py  test_agent_orchestration.py  test_agent_orchestration_integration.py  test_agent_registry.py  test_agent_runtime.py  test_benchmarks.py  test_cli_integration.py  test_config.py  test_context_builder.py  test_context_builder_memory.py  test_event_bus_integration.py  test_exceptions.py  test_export_import.py  test_memory_embeddings.py  test_memory_system.py  test_multi_env_loading.py  test_phase1_agent_execution.py  test_planning_docs_migration.py  test_planning_prompt_contract.py  test_protocols.py  test_sdk_async_client.py  test_sdk_provider_integration.py  test_sdk_sync_client.py  test_session_service.py  test_settings_accounts.py  test_skill_injector.py  test_theme_id_persistence.py  test_thread_safety.py  test_tool_tracking.py  test_tui_handlers.py  test_tui_integration.py
opencode_python/tests/harness/: test_runner.py
opencode_python/tests/llm/: test_client.py
opencode_python/tests/review/: __init__.py  test_base.py  test_characterization_merge_parity.py  test_characterization_refactor_safety.py  test_cli.py  test_contracts.py  test_discovery.py  test_doc_gen.py  test_generate_docs.py  test_integration_entry_points.py  test_integration_review_pipeline.py  test_neighbors.py  test_orchestrator.py  test_orchestrator_entry_points.py  test_parity_baseline.py  test_pattern_learning.py  test_pr_facts.py  test_registry.py  test_self_verification.py  test_streaming.py
opencode_python/tests/themes/: test_registry.py
opencode_python/tests/tui/: test_dialogs.py  test_footer.py  test_header.py  test_theme_commands.py
opencode_python/tests/utils/: test_json_parser.py
(+831 files in other folders)
