[build-system]
requires = ["uv_build >=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dawn-kestrel"
version = "0.1.0"
description = "Dawn Kestrel - Async/sync AI client with optional CLI and TUI interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Dawn Kestrel Contributors", email = "dawnkestrel@example.com"}
]
keywords = ["cli", "tui", "terminal", "ai", "development", "git", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

 dependencies = [
    "aiofiles>=24.0",
    "aiohttp>=3.10",
    "asyncio-extras>=0.22.0",
    "click>=8.0",
    "gitpython>=3.1",
    "httpx>=0.28.1",
    "pendulum>=3.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "python-frontmatter>=1.0",
    "rich>=13.0",
    "ripgrep>=14.0",
    "textual>=7.5.0",
    "tiktoken>=0.8.0",
 ]

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
tui = ["textual>=7.5.0"]
full = ["dawn-kestrel[cli,tui]"]
dev = [
    "faker>=28.0",
    "mypy>=1.8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest>=7.0",
    "ruff>=0.1.0",
 ]

[project.scripts]
dawn-kestrel = "dawn_kestrel.cli.main:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "faker",
    "ty>=0.0.14",
]

[tool.uv.sources]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dawn_kestrel --cov-report=term-missing"
asyncio_mode = "auto"
