[build-system]
requires = ["uv_build >=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dawn-kestrel"
version = "0.1.0"
description = "Dawn Kestrel - Async/sync AI client with optional CLI and TUI interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Dawn Kestrel Contributors", email = "dawnkestrel@example.com"}
]
keywords = ["cli", "tui", "terminal", "ai", "development", "git", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

 dependencies = [
    "aiofiles>=24.0",
    "aiohttp>=3.10",
    "asyncio-extras>=0.22.0",
    "click>=8.0",
    "dependency-injector>=4.41",
    "gitpython>=3.1",
    "httpx>=0.28.1",
    "pendulum>=3.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "python-frontmatter>=1.0",
    "rich>=13.0",
    "ripgrep>=14.0",
    "textual>=7.5.0",
    "tiktoken>=0.8.0",
  ]

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
tui = ["textual>=7.5.0"]
full = ["dawn-kestrel[cli,tui]"]
dev = [
    "faker>=28.0",
    "mypy>=1.8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest>=7.0",
    "ruff>=0.1.0",
 ]

[project.scripts]
dawn-kestrel = "dawn_kestrel.cli.main:cli"

[project.entry-points."dawn_kestrel.tools"]
bash = "dawn_kestrel.tools.builtin:BashTool"
read = "dawn_kestrel.tools.builtin:ReadTool"
write = "dawn_kestrel.tools.builtin:WriteTool"
grep = "dawn_kestrel.tools.builtin:GrepTool"
glob = "dawn_kestrel.tools.builtin:GlobTool"
ast_grep_search = "dawn_kestrel.tools.builtin:ASTGrepTool"
edit = "dawn_kestrel.tools.additional:EditTool"
list = "dawn_kestrel.tools.additional:ListTool"
task = "dawn_kestrel.tools.additional:TaskTool"
question = "dawn_kestrel.tools.additional:QuestionTool"
todoread = "dawn_kestrel.tools.additional:TodoTool"
todowrite = "dawn_kestrel.tools.additional:TodowriteTool"
webfetch = "dawn_kestrel.tools.additional:WebFetchTool"
websearch = "dawn_kestrel.tools.additional:WebSearchTool"
multiedit = "dawn_kestrel.tools.additional:MultiEditTool"
codesearch = "dawn_kestrel.tools.additional:CodeSearchTool"
lsp = "dawn_kestrel.tools.additional:LspTool"
skill = "dawn_kestrel.tools.additional:SkillTool"
externaldirectory = "dawn_kestrel.tools.additional:ExternalDirectoryTool"
compact = "dawn_kestrel.tools.additional:CompactionTool"

[project.entry-points."dawn_kestrel.providers"]
anthropic = "dawn_kestrel.providers:AnthropicProvider"
openai = "dawn_kestrel.providers:OpenAIProvider"
zai = "dawn_kestrel.providers:ZAIProvider"
zai_coding_plan = "dawn_kestrel.providers:ZAICodingPlanProvider"

[project.entry-points."dawn_kestrel.agents"]
orchestrator = "dawn_kestrel.agents.bolt_merlin:orchestrator"
consultant = "dawn_kestrel.agents.bolt_merlin:consultant"
librarian = "dawn_kestrel.agents.bolt_merlin:librarian"
explore = "dawn_kestrel.agents.bolt_merlin:explore"
multimodal_looker = "dawn_kestrel.agents.bolt_merlin:multimodal_looker"
frontend_ui_ux = "dawn_kestrel.agents.bolt_merlin:frontend_ui_ux"
autonomous_worker = "dawn_kestrel.agents.bolt_merlin:autonomous_worker"
pre_planning = "dawn_kestrel.agents.bolt_merlin:pre_planning"
plan_validator = "dawn_kestrel.agents.bolt_merlin:plan_validator"
planner = "dawn_kestrel.agents.bolt_merlin:planner"
master_orchestrator = "dawn_kestrel.agents.bolt_merlin:master_orchestrator"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "faker",
    "ty>=0.0.14",
]

[tool.uv.sources]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dawn_kestrel --cov-report=term-missing"
asyncio_mode = "auto"
